# blog

./: .gitignore  .gitmodules  .stylish-haskell.yaml  LICENSE  README.md  about.html  about.md  blog.cabal  bower.json  frontmatter.hs  gulpfile.js  index.html  package.json  package.yaml  projects.md  server.hs  site.hs  stack.yaml
app/: server.hs  site.hs
content/: 404.html  index.html  keybase.txt  robots.txt
content/images/tumblr/: style.css
content/posts/: 2014-01-20-linux-setup-gnome-3.md  2014-03-08-php-is-not-dead.md  2014-08-12-ensure-04-records.md  2014-09-18-two-problems-from-ai-class.md  2014-10-17-poodle-nodejs.md  2014-10-27-custom-laravel-logs.md  2014-11-08-ensurejs-documentation-shields.md  2014-12-04-minecraft-bot-nodejs.md  2014-12-14-react-mousetrap-mixin.md  2015-01-25-facadeless-migrations.md  2015-02-18-phabricator-bot.md  2015-05-10-heapster-deis.md  2015-12-28-fedora-23-on-mbp.md  2016-02-15-serving-hakyll-site-with-warp.md  2016-05-23-portage.md  2016-07-04-haddock-travis.md  2017-11-05-changelog-blog-35.md
content/projects/: foundation-pagination.md  gonduit.md  illuminated.md  kawaii.md  minebot.md  nucleus.md  phabulous.md  sauron.md  speedbump.md
css/: _code.scss  _colors.scss  _headers.scss  _settings.scss  app.css  app.scss  sass
drafts/: 2015-08-23-example.markdown  2016-02-15-serving-hakyll-site-with-warp.md
posts/: 2014-01-11-reboot-to-nodejs.md  2014-01-20-linux-setup-gnome-3.md  2014-03-08-php-is-not-dead.md  2014-06-07-ensurejs.md  2014-07-23-scss-utility-file.md  2014-08-12-ensure-04-records.md  2014-09-18-two-problems-from-ai-class.md  2014-10-09-some-updates.md  2014-10-13-laravel-pagination-update.md  2014-10-17-poodle-nodejs.md  2014-10-18-foundation-checkboxes.md  2014-10-27-custom-laravel-logs.md  2014-11-05-modernphp-slides.md  2014-11-08-ensurejs-documentation-shields.md  2014-12-04-minecraft-bot-nodejs.md  2014-12-09-minecraft-ai-agent.md  2014-12-14-cleaning-html-input-on-laravel.md  2014-12-14-react-mousetrap-mixin.md  2015-01-19-experimenting-with-structures.md  2015-01-25-facadeless-migrations.md  2015-02-18-phabricator-bot.md  2015-05-10-heapster-deis.md  2015-08-23-example.markdown  2015-08-23-going-static.markdown  2016-02-10-laravel-xhprof.md  2016-03-13-first-impressions-on-gentoo.md  2016-04-08-networkmanager-vpn.md  2016-04-20-haskell-travis-docker.md  2016-05-15-remote-work.md  2016-05-24-lambdaconf-schedule.md  2016-07-04-haddock-travis.md  2016-07-30-fstrim-systemd.md  2017-02-05-phabulous-3.md
projects/: blog.md  craze.md  enclosure.md  ensure.md  foundation-pagination.md  gonduit.md  illuminated.md  legit.md  minebot.md  nexus.md  nucleus.md  phabricator-yubikey.md  phabulous.md  purifier.md  sauron.md  shift.md  speedbump.md  tutum-php.md  vertex.md
scss/: _code.scss  _colors.scss  _headers.scss  _settings.scss  app.scss
scss/components/: _leader.scss  _leaderboard.scss  _logo.scss  _menu.scss
scss/layout/: _masonry.scss  footer.scss
scss/typography/: _code.scss  _headers.scss  _inter-ui.scss
src/: server.hs  site.hs
templates/: archive.html  default.html  disqus.html  full-post.html  paginated.html  pagination.html  post-list.html  post.html  project-teaser.html  project.html  projects.html  twitter.html
