name:                blog
version:             0.1.0.0
synopsis:            Chromabits blog generator and server
description:         Please see README.md
homepage:            http://chromabits.com
license:             MIT
license-file:        LICENSE
author:              Eduardo Trujillo
maintainer:          ed@chromabits.com
copyright:           2015-2016 Eduardo Trujillo
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable blog
  main-is:             site.hs
  default-language:    Haskell2010
  ghc-options:         -threaded
  build-depends:       base == 4.*,
                       hakyll == 4.7.*,
                       filepath == 1.4.*,
                       split == 0.2.*,
                       random,
                       transformers,
                       containers == 0.5.*,
                       pandoc == 1.*,
                       highlighting-kate == 0.6.*

executable server
  main-is:             server.hs
  default-language:    Haskell2010
  ghc-options:         -threaded
  build-depends:       base == 4.*,
                       safe == 0.3.*,
                       text,
                       bytestring == 0.10.*,
                       warp == 3.*,
                       warp-tls == 3.*,
                       wai == 3.*,
                       wai-extra <= 3.0.14,
                       wai-app-static == 3.*
